# ML-Docker-Orchestrator-with-full-MLops-pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  File Structure  Makefile  README.md  env.example  metrics.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  release.yml  security.yml
app/: main.py
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  QUICKSTART.md  RUNBOOK.md  THREAT_MODEL.md
experiments/: mlflow_tracking.py
infra/: docker-compose.yml
infra/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  networkpolicy.yaml  secret.example.yaml  service.yaml  servicemonitor.yaml
infra/observability/: grafana-dashboard.json  prometheus.yml
k8s/: deployment.yaml
monitoring/: metrics.py
scripts/: bootstrap.sh  build_image.sh  deploy_k8s.sh  run_local.sh  smoke_test.sh  train_local.sh
src/orchestrator/: __init__.py  api.py  config.py  logging_config.py  metrics.py  model.py
src/orchestrator/pipeline/: evaluate.py  train.py
tests/: conftest.py  test_config.py  test_health.py  test_predict.py
