[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-docker-orchestrator"
version = "0.1.0"
description = "Production-style ML orchestration with Docker + MLOps pipeline (FastAPI, CI/CD, observability)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Corey Leath"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "python-json-logger>=2.0.7",
  "prometheus-client>=0.20.0",
  "mlflow>=2.10",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.8",
  "bandit>=1.7",
  "pip-audit>=2.7"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
